# rubocop-rs

./: .gitignore  Cargo.toml  build.rs
codegen/: new_cop.liquid  new_cop_tests.liquid
codegen/ast/: node_ref.liquid  processor.liquid
codegen/commissioner/: visitor.liquid
codegen/cop/: base.liquid  mod.liquid  name.liquid
codegen/default/: cops.liquid
config/: default.yml
rubocop-macros/: Cargo.toml
rubocop-macros/src/: lib.rs  matcher_expander.rs
src/: config.rs  lib.rs  main.rs
src/ast/: mod.rs
src/commissioner/: mod.rs
src/cop/: context.rs  mod.rs
src/cop/layout/: def_end_alignment.rs  else_alignment.rs  end_alignment.rs
src/cop/mixin/: range_help.rs
src/cop/style/: begin_block.rs  exact_regexp_match.rs  method_def_parentheses.rs  multiline_if_then.rs  not.rs  redundant_array_constructor.rs  redundant_filter_chain.rs  redundant_regexp_constructor.rs  string_literals.rs
src/default/: mod.rs
src/expect_offense/: annotated_source.rs  mod.rs
src/reporter/: color.rs  mod.rs
src/source/: corrector.rs  decoded_input.rs  mod.rs  rewriter.rs
tests/cop/: mod.rs
tests/cop/layout/: def_end_alignment.rs  else_alignment.rs  end_alignment.rs
tests/cop/style/: begin_block.rs  exact_regexp_match.rs  method_def_parentheses.rs  multiline_if_then.rs  not.rs  redundant_array_constructor.rs  redundant_filter_chain.rs  redundant_regexp_constructor.rs  string_literals.rs
